force-app/main/default/objects/Proveedor__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <label>Contacto</label>
    <type>Text</type>
    <length>255</length>
</CustomField>