force-app/main/default/objects/Proveedor__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <label>Direccion</label>
    <type>TextArea</type>
</CustomField>