force-app/main/default/objects/Proveedor__c/fields/Requiere_Orden_Compra__c.field-meta.xml
<CustomField>
    <fullName>Requiere_Orden_Compra__c</fullName>
    <label>Requiere Orden de Compra</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>