force-app/main/default/objects/Proveedor__c/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <label>Telefono</label>
    <type>Phone</type>
</CustomField>